// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validate ESLint configs .add(Validate ESLint configs for bad.js) should return the proper config 1`] = `
{
  "env": {
    "browser": true,
    "es2021": true,
    "es6": true,
    "node": true,
    "vue/setup-compiler-macros": true,
  },
  "globals": {},
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": StringMatching /\\(vue-eslint-parser@\\|espree@\\|jsonc-eslint-parser\\|yaml-eslint-parser@\\)/,
  "parserOptions": {
    "ecmaVersion": 2020,
    "parser": "@typescript-eslint/parser",
    "sourceType": "module",
  },
  "plugins": [
    "@ada-support/object-newline",
    "@typescript-eslint",
    "vue",
    "jsonc",
    "json-files",
    "yml",
    "sort-annotation",
    "beautiful-sort",
    "sort-class-members",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "@ada-support/object-newline/enforce": [
      "error",
      {
        "items": 2,
      },
    ],
    "@typescript-eslint/adjacent-overload-signatures": [
      "error",
    ],
    "@typescript-eslint/ban-ts-comment": [
      "off",
    ],
    "@typescript-eslint/ban-types": [
      "error",
    ],
    "@typescript-eslint/brace-style": [
      "error",
      "1tbs",
    ],
    "@typescript-eslint/comma-dangle": [
      "error",
      "never",
    ],
    "@typescript-eslint/comma-spacing": [
      "error",
      {
        "after": true,
        "before": false,
      },
    ],
    "@typescript-eslint/consistent-generic-constructors": [
      "warn",
    ],
    "@typescript-eslint/func-call-spacing": [
      "error",
    ],
    "@typescript-eslint/keyword-spacing": [
      "error",
    ],
    "@typescript-eslint/lines-between-class-members": [
      "error",
      "always",
      {
        "exceptAfterSingleLine": true,
      },
    ],
    "@typescript-eslint/member-delimiter-style": [
      "error",
      {
        "multiline": {
          "delimiter": "none",
          "requireLast": true,
        },
        "multilineDetection": "brackets",
        "singleline": {
          "delimiter": "semi",
          "requireLast": false,
        },
      },
    ],
    "@typescript-eslint/method-signature-style": [
      "warn",
      "method",
    ],
    "@typescript-eslint/no-array-constructor": [
      "error",
    ],
    "@typescript-eslint/no-dupe-class-members": [
      "warn",
    ],
    "@typescript-eslint/no-empty-function": [
      "error",
    ],
    "@typescript-eslint/no-empty-interface": [
      "error",
    ],
    "@typescript-eslint/no-explicit-any": [
      "off",
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      "error",
    ],
    "@typescript-eslint/no-extra-parens": [
      "off",
    ],
    "@typescript-eslint/no-extra-semi": [
      "error",
    ],
    "@typescript-eslint/no-extraneous-class": [
      "warn",
    ],
    "@typescript-eslint/no-inferrable-types": [
      "error",
    ],
    "@typescript-eslint/no-loss-of-precision": [
      "error",
    ],
    "@typescript-eslint/no-misused-new": [
      "error",
    ],
    "@typescript-eslint/no-namespace": [
      "error",
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      "error",
    ],
    "@typescript-eslint/no-non-null-assertion": [
      "warn",
    ],
    "@typescript-eslint/no-this-alias": [
      "error",
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      "error",
    ],
    "@typescript-eslint/no-unused-vars": [
      "warn",
    ],
    "@typescript-eslint/no-var-requires": [
      "error",
    ],
    "@typescript-eslint/object-curly-spacing": [
      "error",
      "never",
    ],
    "@typescript-eslint/parameter-properties": [
      "warn",
    ],
    "@typescript-eslint/prefer-as-const": [
      "error",
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      "error",
    ],
    "@typescript-eslint/prefer-ts-expect-error": [
      "warn",
    ],
    "@typescript-eslint/quotes": [
      "error",
      "single",
      {
        "allowTemplateLiterals": true,
        "avoidEscape": true,
      },
    ],
    "@typescript-eslint/semi": [
      "error",
      "never",
    ],
    "@typescript-eslint/sort-type-constituents": [
      "error",
    ],
    "@typescript-eslint/space-before-blocks": [
      "error",
    ],
    "@typescript-eslint/space-before-function-paren": [
      "error",
      {
        "anonymous": "never",
        "asyncArrow": "always",
        "named": "never",
      },
    ],
    "@typescript-eslint/space-infix-ops": [
      "error",
    ],
    "@typescript-eslint/triple-slash-reference": [
      "error",
    ],
    "@typescript-eslint/type-annotation-spacing": [
      "error",
    ],
    "array-bracket-newline": [
      "error",
      {
        "minItems": 3,
        "multiline": true,
      },
    ],
    "array-bracket-spacing": [
      "error",
      "never",
      {
        "arraysInArrays": true,
        "objectsInArrays": true,
      },
    ],
    "array-element-newline": [
      "error",
      {
        "minItems": 3,
        "multiline": true,
      },
    ],
    "arrow-parens": [
      "error",
      "as-needed",
    ],
    "arrow-spacing": [
      "error",
    ],
    "beautiful-sort/import": [
      "error",
      {
        "order": [
          "obj",
          "defaultObj",
          "namespace",
          "default",
          "special",
          "none",
        ],
      },
    ],
    "comma-style": [
      "error",
      "last",
    ],
    "computed-property-spacing": [
      "error",
    ],
    "constructor-super": [
      "error",
    ],
    "curly": [
      "error",
      "multi-line",
      "consistent",
    ],
    "dot-location": [
      "error",
      "property",
    ],
    "eol-last": [
      "error",
    ],
    "eqeqeq": [
      "error",
    ],
    "for-direction": [
      "error",
    ],
    "function-call-argument-newline": [
      "error",
      "consistent",
    ],
    "function-paren-newline": [
      "error",
      {
        "minItems": 6,
      },
    ],
    "generator-star-spacing": [
      "error",
    ],
    "getter-return": [
      "error",
    ],
    "implicit-arrow-linebreak": [
      "error",
    ],
    "indent": [
      "error",
      "tab",
      {
        "MemberExpression": 1,
        "SwitchCase": 1,
        "flatTernaryExpressions": false,
        "ignoreComments": false,
        "offsetTernaryExpressions": false,
      },
    ],
    "json-files/require-unique-dependency-names": [
      "error",
    ],
    "json-files/sort-package-json": [
      "error",
    ],
    "jsonc/auto": [
      "error",
    ],
    "jsonc/no-bigint-literals": [
      "error",
    ],
    "jsonc/no-binary-expression": [
      "error",
    ],
    "jsonc/no-binary-numeric-literals": [
      "error",
    ],
    "jsonc/no-dupe-keys": [
      "error",
    ],
    "jsonc/no-escape-sequence-in-identifier": [
      "error",
    ],
    "jsonc/no-floating-decimal": [
      "error",
    ],
    "jsonc/no-hexadecimal-numeric-literals": [
      "error",
    ],
    "jsonc/no-infinity": [
      "error",
    ],
    "jsonc/no-multi-str": [
      "error",
    ],
    "jsonc/no-nan": [
      "error",
    ],
    "jsonc/no-number-props": [
      "error",
    ],
    "jsonc/no-numeric-separators": [
      "error",
    ],
    "jsonc/no-octal": [
      "error",
    ],
    "jsonc/no-octal-numeric-literals": [
      "error",
    ],
    "jsonc/no-parenthesized": [
      "error",
    ],
    "jsonc/no-plus-sign": [
      "error",
    ],
    "jsonc/no-regexp-literals": [
      "error",
    ],
    "jsonc/no-sparse-arrays": [
      "error",
    ],
    "jsonc/no-template-literals": [
      "error",
    ],
    "jsonc/no-undefined-value": [
      "error",
    ],
    "jsonc/no-unicode-codepoint-escapes": [
      "error",
    ],
    "jsonc/no-useless-escape": [
      "error",
    ],
    "jsonc/quote-props": [
      "error",
    ],
    "jsonc/quotes": [
      "error",
    ],
    "jsonc/space-unary-ops": [
      "error",
    ],
    "jsonc/valid-json-number": [
      "error",
    ],
    "jsonc/vue-custom-block/no-parsing-error": [
      "error",
    ],
    "key-spacing": [
      "error",
    ],
    "linebreak-style": [
      "error",
    ],
    "lines-around-comment": [
      "error",
      {
        "afterBlockComment": false,
        "afterHashbangComment": false,
        "afterLineComment": false,
        "allowBlockEnd": false,
        "allowBlockStart": true,
        "beforeBlockComment": true,
        "beforeLineComment": false,
      },
    ],
    "logical-assignment-operators": [
      "error",
      "always",
      {
        "enforceForIfStatements": true,
      },
    ],
    "max-len": [
      "error",
      {
        "code": 180,
        "comments": 140,
        "ignoreRegExpLiterals": true,
        "ignoreTrailingComments": true,
        "ignoreUrls": true,
        "tabWidth": 4,
      },
    ],
    "no-array-constructor": [
      "off",
    ],
    "no-async-promise-executor": [
      "error",
    ],
    "no-case-declarations": [
      "error",
    ],
    "no-class-assign": [
      "error",
    ],
    "no-compare-neg-zero": [
      "error",
    ],
    "no-cond-assign": [
      "error",
    ],
    "no-const-assign": [
      "error",
    ],
    "no-constant-condition": [
      "error",
    ],
    "no-control-regex": [
      "error",
    ],
    "no-debugger": [
      "error",
    ],
    "no-delete-var": [
      "error",
    ],
    "no-dupe-args": [
      "error",
    ],
    "no-dupe-class-members": [
      "off",
    ],
    "no-dupe-else-if": [
      "error",
    ],
    "no-dupe-keys": [
      "error",
    ],
    "no-duplicate-case": [
      "error",
    ],
    "no-else-return": [
      "error",
    ],
    "no-empty": [
      "error",
    ],
    "no-empty-character-class": [
      "error",
    ],
    "no-empty-function": [
      "off",
    ],
    "no-empty-pattern": [
      "error",
    ],
    "no-ex-assign": [
      "error",
    ],
    "no-extra-boolean-cast": [
      "error",
    ],
    "no-extra-semi": [
      "off",
    ],
    "no-fallthrough": [
      "error",
    ],
    "no-func-assign": [
      "error",
    ],
    "no-global-assign": [
      "error",
    ],
    "no-import-assign": [
      "error",
    ],
    "no-inner-declarations": [
      "error",
    ],
    "no-invalid-regexp": [
      "error",
    ],
    "no-irregular-whitespace": [
      "error",
    ],
    "no-lonely-if": [
      "error",
    ],
    "no-loss-of-precision": [
      "off",
    ],
    "no-misleading-character-class": [
      "error",
    ],
    "no-mixed-spaces-and-tabs": [
      "error",
    ],
    "no-multi-spaces": [
      "error",
    ],
    "no-multiple-empty-lines": [
      "error",
      {
        "max": 1,
      },
    ],
    "no-new-symbol": [
      "error",
    ],
    "no-nonoctal-decimal-escape": [
      "error",
    ],
    "no-obj-calls": [
      "error",
    ],
    "no-octal": [
      "error",
    ],
    "no-prototype-builtins": [
      "error",
    ],
    "no-redeclare": [
      "error",
    ],
    "no-regex-spaces": [
      "error",
    ],
    "no-self-assign": [
      "error",
    ],
    "no-setter-return": [
      "error",
    ],
    "no-shadow-restricted-names": [
      "error",
    ],
    "no-sparse-arrays": [
      "error",
    ],
    "no-this-before-super": [
      "error",
    ],
    "no-trailing-spaces": [
      "error",
    ],
    "no-undef": [
      "error",
    ],
    "no-undef-init": [
      "error",
    ],
    "no-unexpected-multiline": [
      "error",
    ],
    "no-unneeded-ternary": [
      "error",
    ],
    "no-unreachable": [
      "error",
    ],
    "no-unsafe-finally": [
      "error",
    ],
    "no-unsafe-negation": [
      "error",
    ],
    "no-unsafe-optional-chaining": [
      "error",
    ],
    "no-unused-labels": [
      "error",
    ],
    "no-unused-vars": [
      "off",
    ],
    "no-useless-backreference": [
      "error",
    ],
    "no-useless-catch": [
      "error",
    ],
    "no-useless-computed-key": [
      "error",
    ],
    "no-useless-escape": [
      "error",
    ],
    "no-useless-rename": [
      "error",
    ],
    "no-useless-return": [
      "error",
    ],
    "no-var": [
      "error",
    ],
    "no-whitespace-before-property": [
      "error",
    ],
    "no-with": [
      "error",
    ],
    "nonblock-statement-body-position": [
      "error",
      "beside",
    ],
    "object-curly-newline": [
      "error",
      {
        "ExportDeclaration": {
          "consistent": true,
          "minProperties": 4,
          "multiline": true,
        },
        "ImportDeclaration": {
          "consistent": true,
          "minProperties": 10,
          "multiline": true,
        },
        "ObjectExpression": {
          "consistent": true,
          "multiline": true,
        },
        "ObjectPattern": {
          "consistent": true,
          "multiline": true,
        },
      },
    ],
    "object-shorthand": [
      "error",
      "always",
      {
        "avoidExplicitReturnArrows": true,
      },
    ],
    "operator-linebreak": [
      "error",
    ],
    "padded-blocks": [
      "warn",
      "never",
    ],
    "prefer-arrow-callback": [
      "error",
    ],
    "prefer-const": [
      "warn",
    ],
    "prefer-object-spread": [
      "error",
    ],
    "prefer-template": [
      "error",
    ],
    "quote-props": [
      "error",
      "as-needed",
    ],
    "require-yield": [
      "error",
    ],
    "rest-spread-spacing": [
      "error",
    ],
    "semi-spacing": [
      "error",
    ],
    "semi-style": [
      "error",
    ],
    "sort-annotation/sort": [
      "error",
    ],
    "sort-annotation/sort-keys": [
      "error",
    ],
    "sort-class-members/sort-class-members": [
      2,
      {
        "accessorPairPositioning": "getThenSet",
        "order": [
          "[static-properties]",
          "[properties]",
          "[conventional-private-properties]",
          "constructor",
          "[getters]",
          "[setters]",
          "[accessor-pairs]",
          "[static-methods]",
          "[methods]",
          "[async-methods]",
          "[conventional-private-methods]",
          "[everything-else]",
        ],
        "stopAfterFirstProblem": false,
      },
    ],
    "space-in-parens": [
      "error",
    ],
    "space-unary-ops": [
      "error",
    ],
    "spaced-comment": [
      "error",
      "always",
      {
        "markers": [
          "/",
        ],
      },
    ],
    "switch-colon-spacing": [
      "error",
    ],
    "template-curly-spacing": [
      "error",
    ],
    "template-tag-spacing": [
      "error",
    ],
    "use-isnan": [
      "error",
    ],
    "valid-typeof": [
      "error",
    ],
    "vue/attribute-hyphenation": [
      "warn",
    ],
    "vue/attributes-order": [
      "warn",
    ],
    "vue/comment-directive": [
      "error",
    ],
    "vue/component-definition-name-casing": [
      "warn",
    ],
    "vue/component-tags-order": [
      "warn",
    ],
    "vue/first-attribute-linebreak": [
      "warn",
    ],
    "vue/html-closing-bracket-newline": [
      "warn",
    ],
    "vue/html-closing-bracket-spacing": [
      "off",
    ],
    "vue/html-end-tags": [
      "warn",
    ],
    "vue/html-indent": [
      "error",
      "tab",
    ],
    "vue/html-quotes": [
      "warn",
    ],
    "vue/html-self-closing": [
      "warn",
    ],
    "vue/jsx-uses-vars": [
      "error",
    ],
    "vue/max-attributes-per-line": [
      "error",
      {
        "multiline": {
          "max": 1,
        },
        "singleline": {
          "max": 4,
        },
      },
    ],
    "vue/multi-word-component-names": [
      "error",
    ],
    "vue/multiline-html-element-content-newline": [
      "warn",
    ],
    "vue/mustache-interpolation-spacing": [
      "warn",
    ],
    "vue/no-arrow-functions-in-watch": [
      "error",
    ],
    "vue/no-async-in-computed-properties": [
      "error",
    ],
    "vue/no-child-content": [
      "error",
    ],
    "vue/no-computed-properties-in-data": [
      "error",
    ],
    "vue/no-deprecated-data-object-declaration": [
      "error",
    ],
    "vue/no-deprecated-destroyed-lifecycle": [
      "error",
    ],
    "vue/no-deprecated-dollar-listeners-api": [
      "error",
    ],
    "vue/no-deprecated-dollar-scopedslots-api": [
      "error",
    ],
    "vue/no-deprecated-events-api": [
      "error",
    ],
    "vue/no-deprecated-filter": [
      "error",
    ],
    "vue/no-deprecated-functional-template": [
      "error",
    ],
    "vue/no-deprecated-html-element-is": [
      "error",
    ],
    "vue/no-deprecated-inline-template": [
      "error",
    ],
    "vue/no-deprecated-props-default-this": [
      "error",
    ],
    "vue/no-deprecated-router-link-tag-prop": [
      "error",
    ],
    "vue/no-deprecated-scope-attribute": [
      "error",
    ],
    "vue/no-deprecated-slot-attribute": [
      "error",
    ],
    "vue/no-deprecated-slot-scope-attribute": [
      "error",
    ],
    "vue/no-deprecated-v-bind-sync": [
      "error",
    ],
    "vue/no-deprecated-v-is": [
      "error",
    ],
    "vue/no-deprecated-v-on-native-modifier": [
      "error",
    ],
    "vue/no-deprecated-v-on-number-modifiers": [
      "error",
    ],
    "vue/no-deprecated-vue-config-keycodes": [
      "error",
    ],
    "vue/no-dupe-keys": [
      "error",
    ],
    "vue/no-dupe-v-else-if": [
      "error",
    ],
    "vue/no-duplicate-attributes": [
      "error",
    ],
    "vue/no-export-in-script-setup": [
      "error",
    ],
    "vue/no-expose-after-await": [
      "error",
    ],
    "vue/no-lifecycle-after-await": [
      "error",
    ],
    "vue/no-lone-template": [
      "warn",
    ],
    "vue/no-multi-spaces": [
      "warn",
    ],
    "vue/no-multiple-slot-args": [
      "warn",
    ],
    "vue/no-mutating-props": [
      "error",
    ],
    "vue/no-parsing-error": [
      "error",
    ],
    "vue/no-ref-as-operand": [
      "error",
    ],
    "vue/no-reserved-component-names": [
      "error",
    ],
    "vue/no-reserved-keys": [
      "error",
    ],
    "vue/no-reserved-props": [
      "error",
    ],
    "vue/no-setup-props-destructure": [
      "off",
    ],
    "vue/no-shared-component-data": [
      "error",
    ],
    "vue/no-side-effects-in-computed-properties": [
      "error",
    ],
    "vue/no-spaces-around-equal-signs-in-attribute": [
      "warn",
    ],
    "vue/no-static-inline-styles": [
      "error",
      {
        "allowBinding": true,
      },
    ],
    "vue/no-template-key": [
      "error",
    ],
    "vue/no-template-shadow": [
      "warn",
    ],
    "vue/no-textarea-mustache": [
      "error",
    ],
    "vue/no-unused-components": [
      "error",
    ],
    "vue/no-unused-vars": [
      "error",
    ],
    "vue/no-use-computed-property-like-method": [
      "error",
    ],
    "vue/no-use-v-if-with-v-for": [
      "error",
    ],
    "vue/no-useless-template-attributes": [
      "error",
    ],
    "vue/no-v-for-template-key-on-child": [
      "error",
    ],
    "vue/no-v-html": [
      "warn",
    ],
    "vue/no-v-text-v-html-on-component": [
      "error",
    ],
    "vue/no-watch-after-await": [
      "error",
    ],
    "vue/one-component-per-file": [
      "warn",
    ],
    "vue/order-in-components": [
      "warn",
    ],
    "vue/prefer-import-from-vue": [
      "error",
    ],
    "vue/prop-name-casing": [
      "warn",
    ],
    "vue/require-component-is": [
      "error",
    ],
    "vue/require-default-prop": [
      "off",
    ],
    "vue/require-explicit-emits": [
      "warn",
    ],
    "vue/require-prop-type-constructor": [
      "error",
    ],
    "vue/require-prop-types": [
      "warn",
    ],
    "vue/require-render-return": [
      "error",
    ],
    "vue/require-slots-as-functions": [
      "error",
    ],
    "vue/require-toggle-inside-transition": [
      "error",
    ],
    "vue/require-v-for-key": [
      "error",
    ],
    "vue/require-valid-default-prop": [
      "error",
    ],
    "vue/return-in-computed-property": [
      "error",
    ],
    "vue/return-in-emits-validator": [
      "error",
    ],
    "vue/singleline-html-element-content-newline": [
      "warn",
    ],
    "vue/this-in-template": [
      "warn",
    ],
    "vue/use-v-on-exact": [
      "error",
    ],
    "vue/v-bind-style": [
      "warn",
    ],
    "vue/v-on-event-hyphenation": [
      "warn",
      "always",
      {
        "autofix": true,
      },
    ],
    "vue/v-on-style": [
      "warn",
    ],
    "vue/v-slot-style": [
      "warn",
    ],
    "vue/valid-attribute-name": [
      "error",
    ],
    "vue/valid-define-emits": [
      "error",
    ],
    "vue/valid-define-props": [
      "error",
    ],
    "vue/valid-next-tick": [
      "error",
    ],
    "vue/valid-template-root": [
      "error",
    ],
    "vue/valid-v-bind": [
      "error",
    ],
    "vue/valid-v-cloak": [
      "error",
    ],
    "vue/valid-v-else": [
      "error",
    ],
    "vue/valid-v-else-if": [
      "error",
    ],
    "vue/valid-v-for": [
      "error",
    ],
    "vue/valid-v-html": [
      "error",
    ],
    "vue/valid-v-if": [
      "error",
    ],
    "vue/valid-v-is": [
      "error",
    ],
    "vue/valid-v-memo": [
      "error",
    ],
    "vue/valid-v-model": [
      "error",
    ],
    "vue/valid-v-on": [
      "error",
    ],
    "vue/valid-v-once": [
      "error",
    ],
    "vue/valid-v-pre": [
      "error",
    ],
    "vue/valid-v-show": [
      "error",
    ],
    "vue/valid-v-slot": [
      "error",
    ],
    "vue/valid-v-text": [
      "error",
    ],
    "yield-star-spacing": [
      "error",
    ],
    "yml/block-mapping": [
      "error",
    ],
    "yml/block-mapping-question-indicator-newline": [
      "error",
    ],
    "yml/block-sequence": [
      "error",
    ],
    "yml/block-sequence-hyphen-indicator-newline": [
      "error",
    ],
    "yml/flow-mapping-curly-newline": [
      "error",
    ],
    "yml/flow-mapping-curly-spacing": [
      "error",
    ],
    "yml/flow-sequence-bracket-newline": [
      "error",
    ],
    "yml/flow-sequence-bracket-spacing": [
      "error",
    ],
    "yml/indent": [
      "error",
    ],
    "yml/key-spacing": [
      "error",
    ],
    "yml/no-empty-document": [
      "error",
    ],
    "yml/no-empty-key": [
      "error",
    ],
    "yml/no-empty-mapping-value": [
      "error",
    ],
    "yml/no-empty-sequence-entry": [
      "error",
    ],
    "yml/no-irregular-whitespace": [
      "error",
    ],
    "yml/no-multiple-empty-lines": [
      "error",
      {
        "max": 1,
      },
    ],
    "yml/no-tab-indent": [
      "error",
    ],
    "yml/plain-scalar": [
      "error",
    ],
    "yml/quotes": [
      "error",
    ],
    "yml/spaced-comment": [
      "error",
    ],
    "yml/vue-custom-block/no-parsing-error": [
      "error",
    ],
  },
  "settings": {},
}
`;

exports[`Validate ESLint configs .add(Validate ESLint configs for bad.json) should return the proper config 1`] = `
{
  "env": {
    "browser": true,
    "es2021": true,
    "es6": true,
    "node": true,
    "vue/setup-compiler-macros": true,
  },
  "globals": {},
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": StringMatching /\\(vue-eslint-parser@\\|espree@\\|jsonc-eslint-parser\\|yaml-eslint-parser@\\)/,
  "parserOptions": {
    "ecmaVersion": 2020,
    "parser": "@typescript-eslint/parser",
    "sourceType": "module",
  },
  "plugins": [
    "@ada-support/object-newline",
    "@typescript-eslint",
    "vue",
    "jsonc",
    "json-files",
    "yml",
    "sort-annotation",
    "beautiful-sort",
    "sort-class-members",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "@ada-support/object-newline/enforce": [
      "error",
      {
        "items": 2,
      },
    ],
    "@typescript-eslint/adjacent-overload-signatures": [
      "error",
    ],
    "@typescript-eslint/ban-ts-comment": [
      "off",
    ],
    "@typescript-eslint/ban-types": [
      "error",
    ],
    "@typescript-eslint/brace-style": [
      "error",
      "1tbs",
    ],
    "@typescript-eslint/comma-dangle": [
      "error",
      "never",
    ],
    "@typescript-eslint/comma-spacing": [
      "error",
      {
        "after": true,
        "before": false,
      },
    ],
    "@typescript-eslint/consistent-generic-constructors": [
      "warn",
    ],
    "@typescript-eslint/func-call-spacing": [
      "error",
    ],
    "@typescript-eslint/keyword-spacing": [
      "error",
    ],
    "@typescript-eslint/lines-between-class-members": [
      "error",
      "always",
      {
        "exceptAfterSingleLine": true,
      },
    ],
    "@typescript-eslint/member-delimiter-style": [
      "error",
      {
        "multiline": {
          "delimiter": "none",
          "requireLast": true,
        },
        "multilineDetection": "brackets",
        "singleline": {
          "delimiter": "semi",
          "requireLast": false,
        },
      },
    ],
    "@typescript-eslint/method-signature-style": [
      "warn",
      "method",
    ],
    "@typescript-eslint/no-array-constructor": [
      "error",
    ],
    "@typescript-eslint/no-dupe-class-members": [
      "warn",
    ],
    "@typescript-eslint/no-empty-function": [
      "error",
    ],
    "@typescript-eslint/no-empty-interface": [
      "error",
    ],
    "@typescript-eslint/no-explicit-any": [
      "off",
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      "error",
    ],
    "@typescript-eslint/no-extra-parens": [
      "off",
    ],
    "@typescript-eslint/no-extra-semi": [
      "error",
    ],
    "@typescript-eslint/no-extraneous-class": [
      "warn",
    ],
    "@typescript-eslint/no-inferrable-types": [
      "error",
    ],
    "@typescript-eslint/no-loss-of-precision": [
      "error",
    ],
    "@typescript-eslint/no-misused-new": [
      "error",
    ],
    "@typescript-eslint/no-namespace": [
      "error",
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      "error",
    ],
    "@typescript-eslint/no-non-null-assertion": [
      "warn",
    ],
    "@typescript-eslint/no-this-alias": [
      "error",
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      "error",
    ],
    "@typescript-eslint/no-unused-vars": [
      "warn",
    ],
    "@typescript-eslint/no-var-requires": [
      "error",
    ],
    "@typescript-eslint/object-curly-spacing": [
      "error",
      "never",
    ],
    "@typescript-eslint/parameter-properties": [
      "warn",
    ],
    "@typescript-eslint/prefer-as-const": [
      "error",
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      "error",
    ],
    "@typescript-eslint/prefer-ts-expect-error": [
      "warn",
    ],
    "@typescript-eslint/quotes": [
      "error",
      "single",
      {
        "allowTemplateLiterals": true,
        "avoidEscape": true,
      },
    ],
    "@typescript-eslint/semi": [
      "error",
      "never",
    ],
    "@typescript-eslint/sort-type-constituents": [
      "error",
    ],
    "@typescript-eslint/space-before-blocks": [
      "error",
    ],
    "@typescript-eslint/space-before-function-paren": [
      "error",
      {
        "anonymous": "never",
        "asyncArrow": "always",
        "named": "never",
      },
    ],
    "@typescript-eslint/space-infix-ops": [
      "error",
    ],
    "@typescript-eslint/triple-slash-reference": [
      "error",
    ],
    "@typescript-eslint/type-annotation-spacing": [
      "error",
    ],
    "array-bracket-newline": [
      "error",
      {
        "minItems": 3,
        "multiline": true,
      },
    ],
    "array-bracket-spacing": [
      "error",
      "never",
      {
        "arraysInArrays": true,
        "objectsInArrays": true,
      },
    ],
    "array-element-newline": [
      "error",
      {
        "minItems": 3,
        "multiline": true,
      },
    ],
    "arrow-parens": [
      "error",
      "as-needed",
    ],
    "arrow-spacing": [
      "error",
    ],
    "beautiful-sort/import": [
      "error",
      {
        "order": [
          "obj",
          "defaultObj",
          "namespace",
          "default",
          "special",
          "none",
        ],
      },
    ],
    "comma-style": [
      "error",
      "last",
    ],
    "computed-property-spacing": [
      "error",
    ],
    "constructor-super": [
      "error",
    ],
    "curly": [
      "error",
      "multi-line",
      "consistent",
    ],
    "dot-location": [
      "error",
      "property",
    ],
    "eol-last": [
      "error",
    ],
    "eqeqeq": [
      "error",
    ],
    "for-direction": [
      "error",
    ],
    "function-call-argument-newline": [
      "error",
      "consistent",
    ],
    "function-paren-newline": [
      "error",
      {
        "minItems": 6,
      },
    ],
    "generator-star-spacing": [
      "error",
    ],
    "getter-return": [
      "error",
    ],
    "implicit-arrow-linebreak": [
      "error",
    ],
    "indent": [
      "error",
      "tab",
      {
        "MemberExpression": 1,
        "SwitchCase": 1,
        "flatTernaryExpressions": false,
        "ignoreComments": false,
        "offsetTernaryExpressions": false,
      },
    ],
    "json-files/require-unique-dependency-names": [
      "error",
    ],
    "json-files/sort-package-json": [
      "error",
    ],
    "jsonc/auto": [
      "error",
    ],
    "jsonc/no-bigint-literals": [
      "error",
    ],
    "jsonc/no-binary-expression": [
      "error",
    ],
    "jsonc/no-binary-numeric-literals": [
      "error",
    ],
    "jsonc/no-dupe-keys": [
      "error",
    ],
    "jsonc/no-escape-sequence-in-identifier": [
      "error",
    ],
    "jsonc/no-floating-decimal": [
      "error",
    ],
    "jsonc/no-hexadecimal-numeric-literals": [
      "error",
    ],
    "jsonc/no-infinity": [
      "error",
    ],
    "jsonc/no-multi-str": [
      "error",
    ],
    "jsonc/no-nan": [
      "error",
    ],
    "jsonc/no-number-props": [
      "error",
    ],
    "jsonc/no-numeric-separators": [
      "error",
    ],
    "jsonc/no-octal": [
      "error",
    ],
    "jsonc/no-octal-numeric-literals": [
      "error",
    ],
    "jsonc/no-parenthesized": [
      "error",
    ],
    "jsonc/no-plus-sign": [
      "error",
    ],
    "jsonc/no-regexp-literals": [
      "error",
    ],
    "jsonc/no-sparse-arrays": [
      "error",
    ],
    "jsonc/no-template-literals": [
      "error",
    ],
    "jsonc/no-undefined-value": [
      "error",
    ],
    "jsonc/no-unicode-codepoint-escapes": [
      "error",
    ],
    "jsonc/no-useless-escape": [
      "error",
    ],
    "jsonc/quote-props": [
      "error",
    ],
    "jsonc/quotes": [
      "error",
    ],
    "jsonc/space-unary-ops": [
      "error",
    ],
    "jsonc/valid-json-number": [
      "error",
    ],
    "jsonc/vue-custom-block/no-parsing-error": [
      "error",
    ],
    "key-spacing": [
      "error",
    ],
    "linebreak-style": [
      "error",
    ],
    "lines-around-comment": [
      "error",
      {
        "afterBlockComment": false,
        "afterHashbangComment": false,
        "afterLineComment": false,
        "allowBlockEnd": false,
        "allowBlockStart": true,
        "beforeBlockComment": true,
        "beforeLineComment": false,
      },
    ],
    "logical-assignment-operators": [
      "error",
      "always",
      {
        "enforceForIfStatements": true,
      },
    ],
    "max-len": [
      "error",
      {
        "code": 180,
        "comments": 140,
        "ignoreRegExpLiterals": true,
        "ignoreTrailingComments": true,
        "ignoreUrls": true,
        "tabWidth": 4,
      },
    ],
    "no-array-constructor": [
      "off",
    ],
    "no-async-promise-executor": [
      "error",
    ],
    "no-case-declarations": [
      "error",
    ],
    "no-class-assign": [
      "error",
    ],
    "no-compare-neg-zero": [
      "error",
    ],
    "no-cond-assign": [
      "error",
    ],
    "no-const-assign": [
      "error",
    ],
    "no-constant-condition": [
      "error",
    ],
    "no-control-regex": [
      "error",
    ],
    "no-debugger": [
      "error",
    ],
    "no-delete-var": [
      "error",
    ],
    "no-dupe-args": [
      "error",
    ],
    "no-dupe-class-members": [
      "off",
    ],
    "no-dupe-else-if": [
      "error",
    ],
    "no-dupe-keys": [
      "error",
    ],
    "no-duplicate-case": [
      "error",
    ],
    "no-else-return": [
      "error",
    ],
    "no-empty": [
      "error",
    ],
    "no-empty-character-class": [
      "error",
    ],
    "no-empty-function": [
      "off",
    ],
    "no-empty-pattern": [
      "error",
    ],
    "no-ex-assign": [
      "error",
    ],
    "no-extra-boolean-cast": [
      "error",
    ],
    "no-extra-semi": [
      "off",
    ],
    "no-fallthrough": [
      "error",
    ],
    "no-func-assign": [
      "error",
    ],
    "no-global-assign": [
      "error",
    ],
    "no-import-assign": [
      "error",
    ],
    "no-inner-declarations": [
      "error",
    ],
    "no-invalid-regexp": [
      "error",
    ],
    "no-irregular-whitespace": [
      "error",
    ],
    "no-lonely-if": [
      "error",
    ],
    "no-loss-of-precision": [
      "off",
    ],
    "no-misleading-character-class": [
      "error",
    ],
    "no-mixed-spaces-and-tabs": [
      "error",
    ],
    "no-multi-spaces": [
      "error",
    ],
    "no-multiple-empty-lines": [
      "error",
      {
        "max": 1,
      },
    ],
    "no-new-symbol": [
      "error",
    ],
    "no-nonoctal-decimal-escape": [
      "error",
    ],
    "no-obj-calls": [
      "error",
    ],
    "no-octal": [
      "error",
    ],
    "no-prototype-builtins": [
      "error",
    ],
    "no-redeclare": [
      "error",
    ],
    "no-regex-spaces": [
      "error",
    ],
    "no-self-assign": [
      "error",
    ],
    "no-setter-return": [
      "error",
    ],
    "no-shadow-restricted-names": [
      "error",
    ],
    "no-sparse-arrays": [
      "error",
    ],
    "no-this-before-super": [
      "error",
    ],
    "no-trailing-spaces": [
      "error",
    ],
    "no-undef": [
      "error",
    ],
    "no-undef-init": [
      "error",
    ],
    "no-unexpected-multiline": [
      "error",
    ],
    "no-unneeded-ternary": [
      "error",
    ],
    "no-unreachable": [
      "error",
    ],
    "no-unsafe-finally": [
      "error",
    ],
    "no-unsafe-negation": [
      "error",
    ],
    "no-unsafe-optional-chaining": [
      "error",
    ],
    "no-unused-expressions": [
      "off",
    ],
    "no-unused-labels": [
      "error",
    ],
    "no-unused-vars": [
      "off",
    ],
    "no-useless-backreference": [
      "error",
    ],
    "no-useless-catch": [
      "error",
    ],
    "no-useless-computed-key": [
      "error",
    ],
    "no-useless-escape": [
      "error",
    ],
    "no-useless-rename": [
      "error",
    ],
    "no-useless-return": [
      "error",
    ],
    "no-var": [
      "error",
    ],
    "no-whitespace-before-property": [
      "error",
    ],
    "no-with": [
      "error",
    ],
    "nonblock-statement-body-position": [
      "error",
      "beside",
    ],
    "object-curly-newline": [
      "error",
      {
        "ExportDeclaration": {
          "consistent": true,
          "minProperties": 4,
          "multiline": true,
        },
        "ImportDeclaration": {
          "consistent": true,
          "minProperties": 10,
          "multiline": true,
        },
        "ObjectExpression": {
          "consistent": true,
          "multiline": true,
        },
        "ObjectPattern": {
          "consistent": true,
          "multiline": true,
        },
      },
    ],
    "object-shorthand": [
      "error",
      "always",
      {
        "avoidExplicitReturnArrows": true,
      },
    ],
    "operator-linebreak": [
      "error",
    ],
    "padded-blocks": [
      "warn",
      "never",
    ],
    "prefer-arrow-callback": [
      "error",
    ],
    "prefer-const": [
      "warn",
    ],
    "prefer-object-spread": [
      "error",
    ],
    "prefer-template": [
      "error",
    ],
    "quote-props": [
      "error",
      "as-needed",
    ],
    "require-yield": [
      "error",
    ],
    "rest-spread-spacing": [
      "error",
    ],
    "semi-spacing": [
      "error",
    ],
    "semi-style": [
      "error",
    ],
    "sort-annotation/sort": [
      "error",
    ],
    "sort-annotation/sort-keys": [
      "error",
    ],
    "sort-class-members/sort-class-members": [
      2,
      {
        "accessorPairPositioning": "getThenSet",
        "order": [
          "[static-properties]",
          "[properties]",
          "[conventional-private-properties]",
          "constructor",
          "[getters]",
          "[setters]",
          "[accessor-pairs]",
          "[static-methods]",
          "[methods]",
          "[async-methods]",
          "[conventional-private-methods]",
          "[everything-else]",
        ],
        "stopAfterFirstProblem": false,
      },
    ],
    "space-in-parens": [
      "error",
    ],
    "space-unary-ops": [
      "error",
    ],
    "spaced-comment": [
      "error",
      "always",
      {
        "markers": [
          "/",
        ],
      },
    ],
    "strict": [
      "off",
    ],
    "switch-colon-spacing": [
      "error",
    ],
    "template-curly-spacing": [
      "error",
    ],
    "template-tag-spacing": [
      "error",
    ],
    "use-isnan": [
      "error",
    ],
    "valid-typeof": [
      "error",
    ],
    "vue/attribute-hyphenation": [
      "warn",
    ],
    "vue/attributes-order": [
      "warn",
    ],
    "vue/comment-directive": [
      "error",
    ],
    "vue/component-definition-name-casing": [
      "warn",
    ],
    "vue/component-tags-order": [
      "warn",
    ],
    "vue/first-attribute-linebreak": [
      "warn",
    ],
    "vue/html-closing-bracket-newline": [
      "warn",
    ],
    "vue/html-closing-bracket-spacing": [
      "off",
    ],
    "vue/html-end-tags": [
      "warn",
    ],
    "vue/html-indent": [
      "error",
      "tab",
    ],
    "vue/html-quotes": [
      "warn",
    ],
    "vue/html-self-closing": [
      "warn",
    ],
    "vue/jsx-uses-vars": [
      "error",
    ],
    "vue/max-attributes-per-line": [
      "error",
      {
        "multiline": {
          "max": 1,
        },
        "singleline": {
          "max": 4,
        },
      },
    ],
    "vue/multi-word-component-names": [
      "error",
    ],
    "vue/multiline-html-element-content-newline": [
      "warn",
    ],
    "vue/mustache-interpolation-spacing": [
      "warn",
    ],
    "vue/no-arrow-functions-in-watch": [
      "error",
    ],
    "vue/no-async-in-computed-properties": [
      "error",
    ],
    "vue/no-child-content": [
      "error",
    ],
    "vue/no-computed-properties-in-data": [
      "error",
    ],
    "vue/no-deprecated-data-object-declaration": [
      "error",
    ],
    "vue/no-deprecated-destroyed-lifecycle": [
      "error",
    ],
    "vue/no-deprecated-dollar-listeners-api": [
      "error",
    ],
    "vue/no-deprecated-dollar-scopedslots-api": [
      "error",
    ],
    "vue/no-deprecated-events-api": [
      "error",
    ],
    "vue/no-deprecated-filter": [
      "error",
    ],
    "vue/no-deprecated-functional-template": [
      "error",
    ],
    "vue/no-deprecated-html-element-is": [
      "error",
    ],
    "vue/no-deprecated-inline-template": [
      "error",
    ],
    "vue/no-deprecated-props-default-this": [
      "error",
    ],
    "vue/no-deprecated-router-link-tag-prop": [
      "error",
    ],
    "vue/no-deprecated-scope-attribute": [
      "error",
    ],
    "vue/no-deprecated-slot-attribute": [
      "error",
    ],
    "vue/no-deprecated-slot-scope-attribute": [
      "error",
    ],
    "vue/no-deprecated-v-bind-sync": [
      "error",
    ],
    "vue/no-deprecated-v-is": [
      "error",
    ],
    "vue/no-deprecated-v-on-native-modifier": [
      "error",
    ],
    "vue/no-deprecated-v-on-number-modifiers": [
      "error",
    ],
    "vue/no-deprecated-vue-config-keycodes": [
      "error",
    ],
    "vue/no-dupe-keys": [
      "error",
    ],
    "vue/no-dupe-v-else-if": [
      "error",
    ],
    "vue/no-duplicate-attributes": [
      "error",
    ],
    "vue/no-export-in-script-setup": [
      "error",
    ],
    "vue/no-expose-after-await": [
      "error",
    ],
    "vue/no-lifecycle-after-await": [
      "error",
    ],
    "vue/no-lone-template": [
      "warn",
    ],
    "vue/no-multi-spaces": [
      "warn",
    ],
    "vue/no-multiple-slot-args": [
      "warn",
    ],
    "vue/no-mutating-props": [
      "error",
    ],
    "vue/no-parsing-error": [
      "error",
    ],
    "vue/no-ref-as-operand": [
      "error",
    ],
    "vue/no-reserved-component-names": [
      "error",
    ],
    "vue/no-reserved-keys": [
      "error",
    ],
    "vue/no-reserved-props": [
      "error",
    ],
    "vue/no-setup-props-destructure": [
      "off",
    ],
    "vue/no-shared-component-data": [
      "error",
    ],
    "vue/no-side-effects-in-computed-properties": [
      "error",
    ],
    "vue/no-spaces-around-equal-signs-in-attribute": [
      "warn",
    ],
    "vue/no-static-inline-styles": [
      "error",
      {
        "allowBinding": true,
      },
    ],
    "vue/no-template-key": [
      "error",
    ],
    "vue/no-template-shadow": [
      "warn",
    ],
    "vue/no-textarea-mustache": [
      "error",
    ],
    "vue/no-unused-components": [
      "error",
    ],
    "vue/no-unused-vars": [
      "error",
    ],
    "vue/no-use-computed-property-like-method": [
      "error",
    ],
    "vue/no-use-v-if-with-v-for": [
      "error",
    ],
    "vue/no-useless-template-attributes": [
      "error",
    ],
    "vue/no-v-for-template-key-on-child": [
      "error",
    ],
    "vue/no-v-html": [
      "warn",
    ],
    "vue/no-v-text-v-html-on-component": [
      "error",
    ],
    "vue/no-watch-after-await": [
      "error",
    ],
    "vue/one-component-per-file": [
      "warn",
    ],
    "vue/order-in-components": [
      "warn",
    ],
    "vue/prefer-import-from-vue": [
      "error",
    ],
    "vue/prop-name-casing": [
      "warn",
    ],
    "vue/require-component-is": [
      "error",
    ],
    "vue/require-default-prop": [
      "off",
    ],
    "vue/require-explicit-emits": [
      "warn",
    ],
    "vue/require-prop-type-constructor": [
      "error",
    ],
    "vue/require-prop-types": [
      "warn",
    ],
    "vue/require-render-return": [
      "error",
    ],
    "vue/require-slots-as-functions": [
      "error",
    ],
    "vue/require-toggle-inside-transition": [
      "error",
    ],
    "vue/require-v-for-key": [
      "error",
    ],
    "vue/require-valid-default-prop": [
      "error",
    ],
    "vue/return-in-computed-property": [
      "error",
    ],
    "vue/return-in-emits-validator": [
      "error",
    ],
    "vue/singleline-html-element-content-newline": [
      "warn",
    ],
    "vue/this-in-template": [
      "warn",
    ],
    "vue/use-v-on-exact": [
      "error",
    ],
    "vue/v-bind-style": [
      "warn",
    ],
    "vue/v-on-event-hyphenation": [
      "warn",
      "always",
      {
        "autofix": true,
      },
    ],
    "vue/v-on-style": [
      "warn",
    ],
    "vue/v-slot-style": [
      "warn",
    ],
    "vue/valid-attribute-name": [
      "error",
    ],
    "vue/valid-define-emits": [
      "error",
    ],
    "vue/valid-define-props": [
      "error",
    ],
    "vue/valid-next-tick": [
      "error",
    ],
    "vue/valid-template-root": [
      "error",
    ],
    "vue/valid-v-bind": [
      "error",
    ],
    "vue/valid-v-cloak": [
      "error",
    ],
    "vue/valid-v-else": [
      "error",
    ],
    "vue/valid-v-else-if": [
      "error",
    ],
    "vue/valid-v-for": [
      "error",
    ],
    "vue/valid-v-html": [
      "error",
    ],
    "vue/valid-v-if": [
      "error",
    ],
    "vue/valid-v-is": [
      "error",
    ],
    "vue/valid-v-memo": [
      "error",
    ],
    "vue/valid-v-model": [
      "error",
    ],
    "vue/valid-v-on": [
      "error",
    ],
    "vue/valid-v-once": [
      "error",
    ],
    "vue/valid-v-pre": [
      "error",
    ],
    "vue/valid-v-show": [
      "error",
    ],
    "vue/valid-v-slot": [
      "error",
    ],
    "vue/valid-v-text": [
      "error",
    ],
    "yield-star-spacing": [
      "error",
    ],
    "yml/block-mapping": [
      "error",
    ],
    "yml/block-mapping-question-indicator-newline": [
      "error",
    ],
    "yml/block-sequence": [
      "error",
    ],
    "yml/block-sequence-hyphen-indicator-newline": [
      "error",
    ],
    "yml/flow-mapping-curly-newline": [
      "error",
    ],
    "yml/flow-mapping-curly-spacing": [
      "error",
    ],
    "yml/flow-sequence-bracket-newline": [
      "error",
    ],
    "yml/flow-sequence-bracket-spacing": [
      "error",
    ],
    "yml/indent": [
      "error",
    ],
    "yml/key-spacing": [
      "error",
    ],
    "yml/no-empty-document": [
      "error",
    ],
    "yml/no-empty-key": [
      "error",
    ],
    "yml/no-empty-mapping-value": [
      "error",
    ],
    "yml/no-empty-sequence-entry": [
      "error",
    ],
    "yml/no-irregular-whitespace": [
      "error",
    ],
    "yml/no-multiple-empty-lines": [
      "error",
      {
        "max": 1,
      },
    ],
    "yml/no-tab-indent": [
      "error",
    ],
    "yml/plain-scalar": [
      "error",
    ],
    "yml/quotes": [
      "error",
    ],
    "yml/spaced-comment": [
      "error",
    ],
    "yml/vue-custom-block/no-parsing-error": [
      "error",
    ],
  },
  "settings": {},
}
`;

exports[`Validate ESLint configs .add(Validate ESLint configs for bad.ts) should return the proper config 1`] = `
{
  "env": {
    "browser": true,
    "es2021": true,
    "es6": true,
    "node": true,
    "vue/setup-compiler-macros": true,
  },
  "globals": {},
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": StringMatching /\\(vue-eslint-parser@\\|espree@\\|jsonc-eslint-parser\\|yaml-eslint-parser@\\)/,
  "parserOptions": {
    "ecmaVersion": 2020,
    "parser": "@typescript-eslint/parser",
    "project": true,
    "sourceType": "module",
  },
  "plugins": [
    "@ada-support/object-newline",
    "@typescript-eslint",
    "vue",
    "jsonc",
    "json-files",
    "yml",
    "sort-annotation",
    "beautiful-sort",
    "sort-class-members",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "@ada-support/object-newline/enforce": [
      "error",
      {
        "items": 2,
      },
    ],
    "@typescript-eslint/adjacent-overload-signatures": [
      "error",
    ],
    "@typescript-eslint/ban-ts-comment": [
      "off",
    ],
    "@typescript-eslint/ban-types": [
      "error",
    ],
    "@typescript-eslint/brace-style": [
      "error",
      "1tbs",
    ],
    "@typescript-eslint/comma-dangle": [
      "error",
      "never",
    ],
    "@typescript-eslint/comma-spacing": [
      "error",
      {
        "after": true,
        "before": false,
      },
    ],
    "@typescript-eslint/consistent-generic-constructors": [
      "warn",
    ],
    "@typescript-eslint/func-call-spacing": [
      "error",
    ],
    "@typescript-eslint/keyword-spacing": [
      "error",
    ],
    "@typescript-eslint/lines-between-class-members": [
      "error",
      "always",
      {
        "exceptAfterSingleLine": true,
      },
    ],
    "@typescript-eslint/member-delimiter-style": [
      "error",
      {
        "multiline": {
          "delimiter": "none",
          "requireLast": true,
        },
        "multilineDetection": "brackets",
        "singleline": {
          "delimiter": "semi",
          "requireLast": false,
        },
      },
    ],
    "@typescript-eslint/method-signature-style": [
      "warn",
      "method",
    ],
    "@typescript-eslint/no-array-constructor": [
      "error",
    ],
    "@typescript-eslint/no-dupe-class-members": [
      "warn",
    ],
    "@typescript-eslint/no-empty-function": [
      "error",
    ],
    "@typescript-eslint/no-empty-interface": [
      "error",
    ],
    "@typescript-eslint/no-explicit-any": [
      "off",
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      "error",
    ],
    "@typescript-eslint/no-extra-parens": [
      "off",
    ],
    "@typescript-eslint/no-extra-semi": [
      "error",
    ],
    "@typescript-eslint/no-extraneous-class": [
      "warn",
    ],
    "@typescript-eslint/no-inferrable-types": [
      "error",
    ],
    "@typescript-eslint/no-loss-of-precision": [
      "error",
    ],
    "@typescript-eslint/no-misused-new": [
      "error",
    ],
    "@typescript-eslint/no-namespace": [
      "error",
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      "error",
    ],
    "@typescript-eslint/no-non-null-assertion": [
      "warn",
    ],
    "@typescript-eslint/no-this-alias": [
      "error",
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      "error",
    ],
    "@typescript-eslint/no-unused-vars": [
      "warn",
    ],
    "@typescript-eslint/no-var-requires": [
      "error",
    ],
    "@typescript-eslint/object-curly-spacing": [
      "error",
      "never",
    ],
    "@typescript-eslint/parameter-properties": [
      "warn",
    ],
    "@typescript-eslint/prefer-as-const": [
      "error",
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      "error",
    ],
    "@typescript-eslint/prefer-ts-expect-error": [
      "warn",
    ],
    "@typescript-eslint/quotes": [
      "error",
      "single",
      {
        "allowTemplateLiterals": true,
        "avoidEscape": true,
      },
    ],
    "@typescript-eslint/semi": [
      "error",
      "never",
    ],
    "@typescript-eslint/sort-type-constituents": [
      "error",
    ],
    "@typescript-eslint/space-before-blocks": [
      "error",
    ],
    "@typescript-eslint/space-before-function-paren": [
      "error",
      {
        "anonymous": "never",
        "asyncArrow": "always",
        "named": "never",
      },
    ],
    "@typescript-eslint/space-infix-ops": [
      "error",
    ],
    "@typescript-eslint/triple-slash-reference": [
      "error",
    ],
    "@typescript-eslint/type-annotation-spacing": [
      "error",
    ],
    "array-bracket-newline": [
      "error",
      {
        "minItems": 3,
        "multiline": true,
      },
    ],
    "array-bracket-spacing": [
      "error",
      "never",
      {
        "arraysInArrays": true,
        "objectsInArrays": true,
      },
    ],
    "array-element-newline": [
      "error",
      {
        "minItems": 3,
        "multiline": true,
      },
    ],
    "arrow-parens": [
      "error",
      "as-needed",
    ],
    "arrow-spacing": [
      "error",
    ],
    "beautiful-sort/import": [
      "error",
      {
        "order": [
          "obj",
          "defaultObj",
          "namespace",
          "default",
          "special",
          "none",
        ],
      },
    ],
    "comma-style": [
      "error",
      "last",
    ],
    "computed-property-spacing": [
      "error",
    ],
    "constructor-super": [
      "off",
    ],
    "curly": [
      "error",
      "multi-line",
      "consistent",
    ],
    "dot-location": [
      "error",
      "property",
    ],
    "eol-last": [
      "error",
    ],
    "eqeqeq": [
      "error",
    ],
    "for-direction": [
      "error",
    ],
    "function-call-argument-newline": [
      "error",
      "consistent",
    ],
    "function-paren-newline": [
      "error",
      {
        "minItems": 6,
      },
    ],
    "generator-star-spacing": [
      "error",
    ],
    "getter-return": [
      "off",
    ],
    "implicit-arrow-linebreak": [
      "error",
    ],
    "indent": [
      "error",
      "tab",
      {
        "MemberExpression": 1,
        "SwitchCase": 1,
        "flatTernaryExpressions": false,
        "ignoreComments": false,
        "offsetTernaryExpressions": false,
      },
    ],
    "json-files/require-unique-dependency-names": [
      "error",
    ],
    "json-files/sort-package-json": [
      "error",
    ],
    "jsonc/auto": [
      "error",
    ],
    "jsonc/no-bigint-literals": [
      "error",
    ],
    "jsonc/no-binary-expression": [
      "error",
    ],
    "jsonc/no-binary-numeric-literals": [
      "error",
    ],
    "jsonc/no-dupe-keys": [
      "error",
    ],
    "jsonc/no-escape-sequence-in-identifier": [
      "error",
    ],
    "jsonc/no-floating-decimal": [
      "error",
    ],
    "jsonc/no-hexadecimal-numeric-literals": [
      "error",
    ],
    "jsonc/no-infinity": [
      "error",
    ],
    "jsonc/no-multi-str": [
      "error",
    ],
    "jsonc/no-nan": [
      "error",
    ],
    "jsonc/no-number-props": [
      "error",
    ],
    "jsonc/no-numeric-separators": [
      "error",
    ],
    "jsonc/no-octal": [
      "error",
    ],
    "jsonc/no-octal-numeric-literals": [
      "error",
    ],
    "jsonc/no-parenthesized": [
      "error",
    ],
    "jsonc/no-plus-sign": [
      "error",
    ],
    "jsonc/no-regexp-literals": [
      "error",
    ],
    "jsonc/no-sparse-arrays": [
      "error",
    ],
    "jsonc/no-template-literals": [
      "error",
    ],
    "jsonc/no-undefined-value": [
      "error",
    ],
    "jsonc/no-unicode-codepoint-escapes": [
      "error",
    ],
    "jsonc/no-useless-escape": [
      "error",
    ],
    "jsonc/quote-props": [
      "error",
    ],
    "jsonc/quotes": [
      "error",
    ],
    "jsonc/space-unary-ops": [
      "error",
    ],
    "jsonc/valid-json-number": [
      "error",
    ],
    "jsonc/vue-custom-block/no-parsing-error": [
      "error",
    ],
    "key-spacing": [
      "error",
    ],
    "linebreak-style": [
      "error",
    ],
    "lines-around-comment": [
      "error",
      {
        "afterBlockComment": false,
        "afterHashbangComment": false,
        "afterLineComment": false,
        "allowBlockEnd": false,
        "allowBlockStart": true,
        "beforeBlockComment": true,
        "beforeLineComment": false,
      },
    ],
    "logical-assignment-operators": [
      "error",
      "always",
      {
        "enforceForIfStatements": true,
      },
    ],
    "max-len": [
      "error",
      {
        "code": 180,
        "comments": 140,
        "ignoreRegExpLiterals": true,
        "ignoreTrailingComments": true,
        "ignoreUrls": true,
        "tabWidth": 4,
      },
    ],
    "no-array-constructor": [
      "off",
    ],
    "no-async-promise-executor": [
      "error",
    ],
    "no-case-declarations": [
      "error",
    ],
    "no-class-assign": [
      "error",
    ],
    "no-compare-neg-zero": [
      "error",
    ],
    "no-cond-assign": [
      "error",
    ],
    "no-const-assign": [
      "off",
    ],
    "no-constant-condition": [
      "error",
    ],
    "no-control-regex": [
      "error",
    ],
    "no-debugger": [
      "error",
    ],
    "no-delete-var": [
      "error",
    ],
    "no-dupe-args": [
      "off",
    ],
    "no-dupe-class-members": [
      "off",
    ],
    "no-dupe-else-if": [
      "error",
    ],
    "no-dupe-keys": [
      "off",
    ],
    "no-duplicate-case": [
      "error",
    ],
    "no-else-return": [
      "error",
    ],
    "no-empty": [
      "error",
    ],
    "no-empty-character-class": [
      "error",
    ],
    "no-empty-function": [
      "off",
    ],
    "no-empty-pattern": [
      "error",
    ],
    "no-ex-assign": [
      "error",
    ],
    "no-extra-boolean-cast": [
      "error",
    ],
    "no-extra-semi": [
      "off",
    ],
    "no-fallthrough": [
      "error",
    ],
    "no-func-assign": [
      "off",
    ],
    "no-global-assign": [
      "error",
    ],
    "no-import-assign": [
      "off",
    ],
    "no-inner-declarations": [
      "error",
    ],
    "no-invalid-regexp": [
      "error",
    ],
    "no-irregular-whitespace": [
      "error",
    ],
    "no-lonely-if": [
      "error",
    ],
    "no-loss-of-precision": [
      "off",
    ],
    "no-misleading-character-class": [
      "error",
    ],
    "no-mixed-spaces-and-tabs": [
      "error",
    ],
    "no-multi-spaces": [
      "error",
    ],
    "no-multiple-empty-lines": [
      "error",
      {
        "max": 1,
      },
    ],
    "no-new-symbol": [
      "off",
    ],
    "no-nonoctal-decimal-escape": [
      "error",
    ],
    "no-obj-calls": [
      "off",
    ],
    "no-octal": [
      "error",
    ],
    "no-prototype-builtins": [
      "error",
    ],
    "no-redeclare": [
      "off",
    ],
    "no-regex-spaces": [
      "error",
    ],
    "no-self-assign": [
      "error",
    ],
    "no-setter-return": [
      "off",
    ],
    "no-shadow-restricted-names": [
      "error",
    ],
    "no-sparse-arrays": [
      "error",
    ],
    "no-this-before-super": [
      "off",
    ],
    "no-trailing-spaces": [
      "error",
    ],
    "no-undef": [
      "off",
    ],
    "no-undef-init": [
      "error",
    ],
    "no-unexpected-multiline": [
      "error",
    ],
    "no-unneeded-ternary": [
      "error",
    ],
    "no-unreachable": [
      "off",
    ],
    "no-unsafe-finally": [
      "error",
    ],
    "no-unsafe-negation": [
      "off",
    ],
    "no-unsafe-optional-chaining": [
      "error",
    ],
    "no-unused-labels": [
      "error",
    ],
    "no-unused-vars": [
      "off",
    ],
    "no-useless-backreference": [
      "error",
    ],
    "no-useless-catch": [
      "error",
    ],
    "no-useless-computed-key": [
      "error",
    ],
    "no-useless-escape": [
      "error",
    ],
    "no-useless-rename": [
      "error",
    ],
    "no-useless-return": [
      "error",
    ],
    "no-var": [
      "error",
    ],
    "no-whitespace-before-property": [
      "error",
    ],
    "no-with": [
      "error",
    ],
    "nonblock-statement-body-position": [
      "error",
      "beside",
    ],
    "object-curly-newline": [
      "error",
      {
        "ExportDeclaration": {
          "consistent": true,
          "minProperties": 4,
          "multiline": true,
        },
        "ImportDeclaration": {
          "consistent": true,
          "minProperties": 10,
          "multiline": true,
        },
        "ObjectExpression": {
          "consistent": true,
          "multiline": true,
        },
        "ObjectPattern": {
          "consistent": true,
          "multiline": true,
        },
      },
    ],
    "object-shorthand": [
      "error",
      "always",
      {
        "avoidExplicitReturnArrows": true,
      },
    ],
    "operator-linebreak": [
      "error",
    ],
    "padded-blocks": [
      "warn",
      "never",
    ],
    "prefer-arrow-callback": [
      "error",
    ],
    "prefer-const": [
      "warn",
    ],
    "prefer-object-spread": [
      "error",
    ],
    "prefer-rest-params": [
      "error",
    ],
    "prefer-spread": [
      "error",
    ],
    "prefer-template": [
      "error",
    ],
    "quote-props": [
      "error",
      "as-needed",
    ],
    "require-yield": [
      "error",
    ],
    "rest-spread-spacing": [
      "error",
    ],
    "semi-spacing": [
      "error",
    ],
    "semi-style": [
      "error",
    ],
    "sort-annotation/sort": [
      "error",
    ],
    "sort-annotation/sort-keys": [
      "error",
    ],
    "sort-class-members/sort-class-members": [
      2,
      {
        "accessorPairPositioning": "getThenSet",
        "order": [
          "[static-properties]",
          "[properties]",
          "[conventional-private-properties]",
          "constructor",
          "[getters]",
          "[setters]",
          "[accessor-pairs]",
          "[static-methods]",
          "[methods]",
          "[async-methods]",
          "[conventional-private-methods]",
          "[everything-else]",
        ],
        "stopAfterFirstProblem": false,
      },
    ],
    "space-in-parens": [
      "error",
    ],
    "space-unary-ops": [
      "error",
    ],
    "spaced-comment": [
      "error",
      "always",
      {
        "markers": [
          "/",
        ],
      },
    ],
    "switch-colon-spacing": [
      "error",
    ],
    "template-curly-spacing": [
      "error",
    ],
    "template-tag-spacing": [
      "error",
    ],
    "use-isnan": [
      "error",
    ],
    "valid-typeof": [
      "off",
    ],
    "vue/attribute-hyphenation": [
      "warn",
    ],
    "vue/attributes-order": [
      "warn",
    ],
    "vue/comment-directive": [
      "error",
    ],
    "vue/component-definition-name-casing": [
      "warn",
    ],
    "vue/component-tags-order": [
      "warn",
    ],
    "vue/first-attribute-linebreak": [
      "warn",
    ],
    "vue/html-closing-bracket-newline": [
      "warn",
    ],
    "vue/html-closing-bracket-spacing": [
      "off",
    ],
    "vue/html-end-tags": [
      "warn",
    ],
    "vue/html-indent": [
      "error",
      "tab",
    ],
    "vue/html-quotes": [
      "warn",
    ],
    "vue/html-self-closing": [
      "warn",
    ],
    "vue/jsx-uses-vars": [
      "error",
    ],
    "vue/max-attributes-per-line": [
      "error",
      {
        "multiline": {
          "max": 1,
        },
        "singleline": {
          "max": 4,
        },
      },
    ],
    "vue/multi-word-component-names": [
      "error",
    ],
    "vue/multiline-html-element-content-newline": [
      "warn",
    ],
    "vue/mustache-interpolation-spacing": [
      "warn",
    ],
    "vue/no-arrow-functions-in-watch": [
      "error",
    ],
    "vue/no-async-in-computed-properties": [
      "error",
    ],
    "vue/no-child-content": [
      "error",
    ],
    "vue/no-computed-properties-in-data": [
      "error",
    ],
    "vue/no-deprecated-data-object-declaration": [
      "error",
    ],
    "vue/no-deprecated-destroyed-lifecycle": [
      "error",
    ],
    "vue/no-deprecated-dollar-listeners-api": [
      "error",
    ],
    "vue/no-deprecated-dollar-scopedslots-api": [
      "error",
    ],
    "vue/no-deprecated-events-api": [
      "error",
    ],
    "vue/no-deprecated-filter": [
      "error",
    ],
    "vue/no-deprecated-functional-template": [
      "error",
    ],
    "vue/no-deprecated-html-element-is": [
      "error",
    ],
    "vue/no-deprecated-inline-template": [
      "error",
    ],
    "vue/no-deprecated-props-default-this": [
      "error",
    ],
    "vue/no-deprecated-router-link-tag-prop": [
      "error",
    ],
    "vue/no-deprecated-scope-attribute": [
      "error",
    ],
    "vue/no-deprecated-slot-attribute": [
      "error",
    ],
    "vue/no-deprecated-slot-scope-attribute": [
      "error",
    ],
    "vue/no-deprecated-v-bind-sync": [
      "error",
    ],
    "vue/no-deprecated-v-is": [
      "error",
    ],
    "vue/no-deprecated-v-on-native-modifier": [
      "error",
    ],
    "vue/no-deprecated-v-on-number-modifiers": [
      "error",
    ],
    "vue/no-deprecated-vue-config-keycodes": [
      "error",
    ],
    "vue/no-dupe-keys": [
      "error",
    ],
    "vue/no-dupe-v-else-if": [
      "error",
    ],
    "vue/no-duplicate-attributes": [
      "error",
    ],
    "vue/no-export-in-script-setup": [
      "error",
    ],
    "vue/no-expose-after-await": [
      "error",
    ],
    "vue/no-lifecycle-after-await": [
      "error",
    ],
    "vue/no-lone-template": [
      "warn",
    ],
    "vue/no-multi-spaces": [
      "warn",
    ],
    "vue/no-multiple-slot-args": [
      "warn",
    ],
    "vue/no-mutating-props": [
      "error",
    ],
    "vue/no-parsing-error": [
      "error",
    ],
    "vue/no-ref-as-operand": [
      "error",
    ],
    "vue/no-reserved-component-names": [
      "error",
    ],
    "vue/no-reserved-keys": [
      "error",
    ],
    "vue/no-reserved-props": [
      "error",
    ],
    "vue/no-setup-props-destructure": [
      "off",
    ],
    "vue/no-shared-component-data": [
      "error",
    ],
    "vue/no-side-effects-in-computed-properties": [
      "error",
    ],
    "vue/no-spaces-around-equal-signs-in-attribute": [
      "warn",
    ],
    "vue/no-static-inline-styles": [
      "error",
      {
        "allowBinding": true,
      },
    ],
    "vue/no-template-key": [
      "error",
    ],
    "vue/no-template-shadow": [
      "warn",
    ],
    "vue/no-textarea-mustache": [
      "error",
    ],
    "vue/no-unused-components": [
      "error",
    ],
    "vue/no-unused-vars": [
      "error",
    ],
    "vue/no-use-computed-property-like-method": [
      "error",
    ],
    "vue/no-use-v-if-with-v-for": [
      "error",
    ],
    "vue/no-useless-template-attributes": [
      "error",
    ],
    "vue/no-v-for-template-key-on-child": [
      "error",
    ],
    "vue/no-v-html": [
      "warn",
    ],
    "vue/no-v-text-v-html-on-component": [
      "error",
    ],
    "vue/no-watch-after-await": [
      "error",
    ],
    "vue/one-component-per-file": [
      "warn",
    ],
    "vue/order-in-components": [
      "warn",
    ],
    "vue/prefer-import-from-vue": [
      "error",
    ],
    "vue/prop-name-casing": [
      "warn",
    ],
    "vue/require-component-is": [
      "error",
    ],
    "vue/require-default-prop": [
      "off",
    ],
    "vue/require-explicit-emits": [
      "warn",
    ],
    "vue/require-prop-type-constructor": [
      "error",
    ],
    "vue/require-prop-types": [
      "warn",
    ],
    "vue/require-render-return": [
      "error",
    ],
    "vue/require-slots-as-functions": [
      "error",
    ],
    "vue/require-toggle-inside-transition": [
      "error",
    ],
    "vue/require-v-for-key": [
      "error",
    ],
    "vue/require-valid-default-prop": [
      "error",
    ],
    "vue/return-in-computed-property": [
      "error",
    ],
    "vue/return-in-emits-validator": [
      "error",
    ],
    "vue/singleline-html-element-content-newline": [
      "warn",
    ],
    "vue/this-in-template": [
      "warn",
    ],
    "vue/use-v-on-exact": [
      "error",
    ],
    "vue/v-bind-style": [
      "warn",
    ],
    "vue/v-on-event-hyphenation": [
      "warn",
      "always",
      {
        "autofix": true,
      },
    ],
    "vue/v-on-style": [
      "warn",
    ],
    "vue/v-slot-style": [
      "warn",
    ],
    "vue/valid-attribute-name": [
      "error",
    ],
    "vue/valid-define-emits": [
      "error",
    ],
    "vue/valid-define-props": [
      "error",
    ],
    "vue/valid-next-tick": [
      "error",
    ],
    "vue/valid-template-root": [
      "error",
    ],
    "vue/valid-v-bind": [
      "error",
    ],
    "vue/valid-v-cloak": [
      "error",
    ],
    "vue/valid-v-else": [
      "error",
    ],
    "vue/valid-v-else-if": [
      "error",
    ],
    "vue/valid-v-for": [
      "error",
    ],
    "vue/valid-v-html": [
      "error",
    ],
    "vue/valid-v-if": [
      "error",
    ],
    "vue/valid-v-is": [
      "error",
    ],
    "vue/valid-v-memo": [
      "error",
    ],
    "vue/valid-v-model": [
      "error",
    ],
    "vue/valid-v-on": [
      "error",
    ],
    "vue/valid-v-once": [
      "error",
    ],
    "vue/valid-v-pre": [
      "error",
    ],
    "vue/valid-v-show": [
      "error",
    ],
    "vue/valid-v-slot": [
      "error",
    ],
    "vue/valid-v-text": [
      "error",
    ],
    "yield-star-spacing": [
      "error",
    ],
    "yml/block-mapping": [
      "error",
    ],
    "yml/block-mapping-question-indicator-newline": [
      "error",
    ],
    "yml/block-sequence": [
      "error",
    ],
    "yml/block-sequence-hyphen-indicator-newline": [
      "error",
    ],
    "yml/flow-mapping-curly-newline": [
      "error",
    ],
    "yml/flow-mapping-curly-spacing": [
      "error",
    ],
    "yml/flow-sequence-bracket-newline": [
      "error",
    ],
    "yml/flow-sequence-bracket-spacing": [
      "error",
    ],
    "yml/indent": [
      "error",
    ],
    "yml/key-spacing": [
      "error",
    ],
    "yml/no-empty-document": [
      "error",
    ],
    "yml/no-empty-key": [
      "error",
    ],
    "yml/no-empty-mapping-value": [
      "error",
    ],
    "yml/no-empty-sequence-entry": [
      "error",
    ],
    "yml/no-irregular-whitespace": [
      "error",
    ],
    "yml/no-multiple-empty-lines": [
      "error",
      {
        "max": 1,
      },
    ],
    "yml/no-tab-indent": [
      "error",
    ],
    "yml/plain-scalar": [
      "error",
    ],
    "yml/quotes": [
      "error",
    ],
    "yml/spaced-comment": [
      "error",
    ],
    "yml/vue-custom-block/no-parsing-error": [
      "error",
    ],
  },
  "settings": {},
}
`;

exports[`Validate ESLint configs .add(Validate ESLint configs for bad.yml) should return the proper config 1`] = `
{
  "env": {
    "browser": true,
    "es2021": true,
    "es6": true,
    "node": true,
    "vue/setup-compiler-macros": true,
  },
  "globals": {},
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": StringMatching /\\(vue-eslint-parser@\\|espree@\\|jsonc-eslint-parser\\|yaml-eslint-parser@\\)/,
  "parserOptions": {
    "ecmaVersion": 2020,
    "parser": "@typescript-eslint/parser",
    "sourceType": "module",
  },
  "plugins": [
    "@ada-support/object-newline",
    "@typescript-eslint",
    "vue",
    "jsonc",
    "json-files",
    "yml",
    "sort-annotation",
    "beautiful-sort",
    "sort-class-members",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "@ada-support/object-newline/enforce": [
      "error",
      {
        "items": 2,
      },
    ],
    "@typescript-eslint/adjacent-overload-signatures": [
      "error",
    ],
    "@typescript-eslint/ban-ts-comment": [
      "off",
    ],
    "@typescript-eslint/ban-types": [
      "error",
    ],
    "@typescript-eslint/brace-style": [
      "error",
      "1tbs",
    ],
    "@typescript-eslint/comma-dangle": [
      "error",
      "never",
    ],
    "@typescript-eslint/comma-spacing": [
      "error",
      {
        "after": true,
        "before": false,
      },
    ],
    "@typescript-eslint/consistent-generic-constructors": [
      "warn",
    ],
    "@typescript-eslint/func-call-spacing": [
      "error",
    ],
    "@typescript-eslint/keyword-spacing": [
      "error",
    ],
    "@typescript-eslint/lines-between-class-members": [
      "error",
      "always",
      {
        "exceptAfterSingleLine": true,
      },
    ],
    "@typescript-eslint/member-delimiter-style": [
      "error",
      {
        "multiline": {
          "delimiter": "none",
          "requireLast": true,
        },
        "multilineDetection": "brackets",
        "singleline": {
          "delimiter": "semi",
          "requireLast": false,
        },
      },
    ],
    "@typescript-eslint/method-signature-style": [
      "warn",
      "method",
    ],
    "@typescript-eslint/no-array-constructor": [
      "error",
    ],
    "@typescript-eslint/no-dupe-class-members": [
      "warn",
    ],
    "@typescript-eslint/no-empty-function": [
      "error",
    ],
    "@typescript-eslint/no-empty-interface": [
      "error",
    ],
    "@typescript-eslint/no-explicit-any": [
      "off",
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      "error",
    ],
    "@typescript-eslint/no-extra-parens": [
      "off",
    ],
    "@typescript-eslint/no-extra-semi": [
      "error",
    ],
    "@typescript-eslint/no-extraneous-class": [
      "warn",
    ],
    "@typescript-eslint/no-inferrable-types": [
      "error",
    ],
    "@typescript-eslint/no-loss-of-precision": [
      "error",
    ],
    "@typescript-eslint/no-misused-new": [
      "error",
    ],
    "@typescript-eslint/no-namespace": [
      "error",
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      "error",
    ],
    "@typescript-eslint/no-non-null-assertion": [
      "warn",
    ],
    "@typescript-eslint/no-this-alias": [
      "error",
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      "error",
    ],
    "@typescript-eslint/no-unused-vars": [
      "warn",
    ],
    "@typescript-eslint/no-var-requires": [
      "error",
    ],
    "@typescript-eslint/object-curly-spacing": [
      "error",
      "never",
    ],
    "@typescript-eslint/parameter-properties": [
      "warn",
    ],
    "@typescript-eslint/prefer-as-const": [
      "error",
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      "error",
    ],
    "@typescript-eslint/prefer-ts-expect-error": [
      "warn",
    ],
    "@typescript-eslint/quotes": [
      "error",
      "single",
      {
        "allowTemplateLiterals": true,
        "avoidEscape": true,
      },
    ],
    "@typescript-eslint/semi": [
      "error",
      "never",
    ],
    "@typescript-eslint/sort-type-constituents": [
      "error",
    ],
    "@typescript-eslint/space-before-blocks": [
      "error",
    ],
    "@typescript-eslint/space-before-function-paren": [
      "error",
      {
        "anonymous": "never",
        "asyncArrow": "always",
        "named": "never",
      },
    ],
    "@typescript-eslint/space-infix-ops": [
      "error",
    ],
    "@typescript-eslint/triple-slash-reference": [
      "error",
    ],
    "@typescript-eslint/type-annotation-spacing": [
      "error",
    ],
    "array-bracket-newline": [
      "error",
      {
        "minItems": 3,
        "multiline": true,
      },
    ],
    "array-bracket-spacing": [
      "error",
      "never",
      {
        "arraysInArrays": true,
        "objectsInArrays": true,
      },
    ],
    "array-element-newline": [
      "error",
      {
        "minItems": 3,
        "multiline": true,
      },
    ],
    "arrow-parens": [
      "error",
      "as-needed",
    ],
    "arrow-spacing": [
      "error",
    ],
    "beautiful-sort/import": [
      "error",
      {
        "order": [
          "obj",
          "defaultObj",
          "namespace",
          "default",
          "special",
          "none",
        ],
      },
    ],
    "comma-style": [
      "error",
      "last",
    ],
    "computed-property-spacing": [
      "error",
    ],
    "constructor-super": [
      "error",
    ],
    "curly": [
      "error",
      "multi-line",
      "consistent",
    ],
    "dot-location": [
      "error",
      "property",
    ],
    "eol-last": [
      "error",
    ],
    "eqeqeq": [
      "error",
    ],
    "for-direction": [
      "error",
    ],
    "function-call-argument-newline": [
      "error",
      "consistent",
    ],
    "function-paren-newline": [
      "error",
      {
        "minItems": 6,
      },
    ],
    "generator-star-spacing": [
      "error",
    ],
    "getter-return": [
      "error",
    ],
    "implicit-arrow-linebreak": [
      "error",
    ],
    "indent": [
      "error",
      "tab",
      {
        "MemberExpression": 1,
        "SwitchCase": 1,
        "flatTernaryExpressions": false,
        "ignoreComments": false,
        "offsetTernaryExpressions": false,
      },
    ],
    "json-files/require-unique-dependency-names": [
      "error",
    ],
    "json-files/sort-package-json": [
      "error",
    ],
    "jsonc/auto": [
      "error",
    ],
    "jsonc/no-bigint-literals": [
      "error",
    ],
    "jsonc/no-binary-expression": [
      "error",
    ],
    "jsonc/no-binary-numeric-literals": [
      "error",
    ],
    "jsonc/no-dupe-keys": [
      "error",
    ],
    "jsonc/no-escape-sequence-in-identifier": [
      "error",
    ],
    "jsonc/no-floating-decimal": [
      "error",
    ],
    "jsonc/no-hexadecimal-numeric-literals": [
      "error",
    ],
    "jsonc/no-infinity": [
      "error",
    ],
    "jsonc/no-multi-str": [
      "error",
    ],
    "jsonc/no-nan": [
      "error",
    ],
    "jsonc/no-number-props": [
      "error",
    ],
    "jsonc/no-numeric-separators": [
      "error",
    ],
    "jsonc/no-octal": [
      "error",
    ],
    "jsonc/no-octal-numeric-literals": [
      "error",
    ],
    "jsonc/no-parenthesized": [
      "error",
    ],
    "jsonc/no-plus-sign": [
      "error",
    ],
    "jsonc/no-regexp-literals": [
      "error",
    ],
    "jsonc/no-sparse-arrays": [
      "error",
    ],
    "jsonc/no-template-literals": [
      "error",
    ],
    "jsonc/no-undefined-value": [
      "error",
    ],
    "jsonc/no-unicode-codepoint-escapes": [
      "error",
    ],
    "jsonc/no-useless-escape": [
      "error",
    ],
    "jsonc/quote-props": [
      "error",
    ],
    "jsonc/quotes": [
      "error",
    ],
    "jsonc/space-unary-ops": [
      "error",
    ],
    "jsonc/valid-json-number": [
      "error",
    ],
    "jsonc/vue-custom-block/no-parsing-error": [
      "error",
    ],
    "key-spacing": [
      "error",
    ],
    "linebreak-style": [
      "error",
    ],
    "lines-around-comment": [
      "error",
      {
        "afterBlockComment": false,
        "afterHashbangComment": false,
        "afterLineComment": false,
        "allowBlockEnd": false,
        "allowBlockStart": true,
        "beforeBlockComment": true,
        "beforeLineComment": false,
      },
    ],
    "logical-assignment-operators": [
      "error",
      "always",
      {
        "enforceForIfStatements": true,
      },
    ],
    "max-len": [
      "error",
      {
        "code": 180,
        "comments": 140,
        "ignoreRegExpLiterals": true,
        "ignoreTrailingComments": true,
        "ignoreUrls": true,
        "tabWidth": 4,
      },
    ],
    "no-array-constructor": [
      "off",
    ],
    "no-async-promise-executor": [
      "error",
    ],
    "no-case-declarations": [
      "error",
    ],
    "no-class-assign": [
      "error",
    ],
    "no-compare-neg-zero": [
      "error",
    ],
    "no-cond-assign": [
      "error",
    ],
    "no-const-assign": [
      "error",
    ],
    "no-constant-condition": [
      "error",
    ],
    "no-control-regex": [
      "error",
    ],
    "no-debugger": [
      "error",
    ],
    "no-delete-var": [
      "error",
    ],
    "no-dupe-args": [
      "error",
    ],
    "no-dupe-class-members": [
      "off",
    ],
    "no-dupe-else-if": [
      "error",
    ],
    "no-dupe-keys": [
      "error",
    ],
    "no-duplicate-case": [
      "error",
    ],
    "no-else-return": [
      "error",
    ],
    "no-empty": [
      "error",
    ],
    "no-empty-character-class": [
      "error",
    ],
    "no-empty-function": [
      "off",
    ],
    "no-empty-pattern": [
      "error",
    ],
    "no-ex-assign": [
      "error",
    ],
    "no-extra-boolean-cast": [
      "error",
    ],
    "no-extra-semi": [
      "off",
    ],
    "no-fallthrough": [
      "error",
    ],
    "no-func-assign": [
      "error",
    ],
    "no-global-assign": [
      "error",
    ],
    "no-import-assign": [
      "error",
    ],
    "no-inner-declarations": [
      "error",
    ],
    "no-invalid-regexp": [
      "error",
    ],
    "no-irregular-whitespace": [
      "off",
    ],
    "no-lonely-if": [
      "error",
    ],
    "no-loss-of-precision": [
      "off",
    ],
    "no-misleading-character-class": [
      "error",
    ],
    "no-mixed-spaces-and-tabs": [
      "error",
    ],
    "no-multi-spaces": [
      "error",
    ],
    "no-multiple-empty-lines": [
      "error",
      {
        "max": 1,
      },
    ],
    "no-new-symbol": [
      "error",
    ],
    "no-nonoctal-decimal-escape": [
      "error",
    ],
    "no-obj-calls": [
      "error",
    ],
    "no-octal": [
      "error",
    ],
    "no-prototype-builtins": [
      "error",
    ],
    "no-redeclare": [
      "error",
    ],
    "no-regex-spaces": [
      "error",
    ],
    "no-self-assign": [
      "error",
    ],
    "no-setter-return": [
      "error",
    ],
    "no-shadow-restricted-names": [
      "error",
    ],
    "no-sparse-arrays": [
      "error",
    ],
    "no-this-before-super": [
      "error",
    ],
    "no-trailing-spaces": [
      "error",
    ],
    "no-undef": [
      "error",
    ],
    "no-undef-init": [
      "error",
    ],
    "no-unexpected-multiline": [
      "error",
    ],
    "no-unneeded-ternary": [
      "error",
    ],
    "no-unreachable": [
      "error",
    ],
    "no-unsafe-finally": [
      "error",
    ],
    "no-unsafe-negation": [
      "error",
    ],
    "no-unsafe-optional-chaining": [
      "error",
    ],
    "no-unused-labels": [
      "error",
    ],
    "no-unused-vars": [
      "off",
    ],
    "no-useless-backreference": [
      "error",
    ],
    "no-useless-catch": [
      "error",
    ],
    "no-useless-computed-key": [
      "error",
    ],
    "no-useless-escape": [
      "error",
    ],
    "no-useless-rename": [
      "error",
    ],
    "no-useless-return": [
      "error",
    ],
    "no-var": [
      "error",
    ],
    "no-whitespace-before-property": [
      "error",
    ],
    "no-with": [
      "error",
    ],
    "nonblock-statement-body-position": [
      "error",
      "beside",
    ],
    "object-curly-newline": [
      "error",
      {
        "ExportDeclaration": {
          "consistent": true,
          "minProperties": 4,
          "multiline": true,
        },
        "ImportDeclaration": {
          "consistent": true,
          "minProperties": 10,
          "multiline": true,
        },
        "ObjectExpression": {
          "consistent": true,
          "multiline": true,
        },
        "ObjectPattern": {
          "consistent": true,
          "multiline": true,
        },
      },
    ],
    "object-shorthand": [
      "error",
      "always",
      {
        "avoidExplicitReturnArrows": true,
      },
    ],
    "operator-linebreak": [
      "error",
    ],
    "padded-blocks": [
      "warn",
      "never",
    ],
    "prefer-arrow-callback": [
      "error",
    ],
    "prefer-const": [
      "warn",
    ],
    "prefer-object-spread": [
      "error",
    ],
    "prefer-template": [
      "error",
    ],
    "quote-props": [
      "error",
      "as-needed",
    ],
    "require-yield": [
      "error",
    ],
    "rest-spread-spacing": [
      "error",
    ],
    "semi-spacing": [
      "error",
    ],
    "semi-style": [
      "error",
    ],
    "sort-annotation/sort": [
      "error",
    ],
    "sort-annotation/sort-keys": [
      "error",
    ],
    "sort-class-members/sort-class-members": [
      2,
      {
        "accessorPairPositioning": "getThenSet",
        "order": [
          "[static-properties]",
          "[properties]",
          "[conventional-private-properties]",
          "constructor",
          "[getters]",
          "[setters]",
          "[accessor-pairs]",
          "[static-methods]",
          "[methods]",
          "[async-methods]",
          "[conventional-private-methods]",
          "[everything-else]",
        ],
        "stopAfterFirstProblem": false,
      },
    ],
    "space-in-parens": [
      "error",
    ],
    "space-unary-ops": [
      "error",
    ],
    "spaced-comment": [
      "off",
      "always",
      {
        "markers": [
          "/",
        ],
      },
    ],
    "switch-colon-spacing": [
      "error",
    ],
    "template-curly-spacing": [
      "error",
    ],
    "template-tag-spacing": [
      "error",
    ],
    "use-isnan": [
      "error",
    ],
    "valid-typeof": [
      "error",
    ],
    "vue/attribute-hyphenation": [
      "warn",
    ],
    "vue/attributes-order": [
      "warn",
    ],
    "vue/comment-directive": [
      "error",
    ],
    "vue/component-definition-name-casing": [
      "warn",
    ],
    "vue/component-tags-order": [
      "warn",
    ],
    "vue/first-attribute-linebreak": [
      "warn",
    ],
    "vue/html-closing-bracket-newline": [
      "warn",
    ],
    "vue/html-closing-bracket-spacing": [
      "off",
    ],
    "vue/html-end-tags": [
      "warn",
    ],
    "vue/html-indent": [
      "error",
      "tab",
    ],
    "vue/html-quotes": [
      "warn",
    ],
    "vue/html-self-closing": [
      "warn",
    ],
    "vue/jsx-uses-vars": [
      "error",
    ],
    "vue/max-attributes-per-line": [
      "error",
      {
        "multiline": {
          "max": 1,
        },
        "singleline": {
          "max": 4,
        },
      },
    ],
    "vue/multi-word-component-names": [
      "error",
    ],
    "vue/multiline-html-element-content-newline": [
      "warn",
    ],
    "vue/mustache-interpolation-spacing": [
      "warn",
    ],
    "vue/no-arrow-functions-in-watch": [
      "error",
    ],
    "vue/no-async-in-computed-properties": [
      "error",
    ],
    "vue/no-child-content": [
      "error",
    ],
    "vue/no-computed-properties-in-data": [
      "error",
    ],
    "vue/no-deprecated-data-object-declaration": [
      "error",
    ],
    "vue/no-deprecated-destroyed-lifecycle": [
      "error",
    ],
    "vue/no-deprecated-dollar-listeners-api": [
      "error",
    ],
    "vue/no-deprecated-dollar-scopedslots-api": [
      "error",
    ],
    "vue/no-deprecated-events-api": [
      "error",
    ],
    "vue/no-deprecated-filter": [
      "error",
    ],
    "vue/no-deprecated-functional-template": [
      "error",
    ],
    "vue/no-deprecated-html-element-is": [
      "error",
    ],
    "vue/no-deprecated-inline-template": [
      "error",
    ],
    "vue/no-deprecated-props-default-this": [
      "error",
    ],
    "vue/no-deprecated-router-link-tag-prop": [
      "error",
    ],
    "vue/no-deprecated-scope-attribute": [
      "error",
    ],
    "vue/no-deprecated-slot-attribute": [
      "error",
    ],
    "vue/no-deprecated-slot-scope-attribute": [
      "error",
    ],
    "vue/no-deprecated-v-bind-sync": [
      "error",
    ],
    "vue/no-deprecated-v-is": [
      "error",
    ],
    "vue/no-deprecated-v-on-native-modifier": [
      "error",
    ],
    "vue/no-deprecated-v-on-number-modifiers": [
      "error",
    ],
    "vue/no-deprecated-vue-config-keycodes": [
      "error",
    ],
    "vue/no-dupe-keys": [
      "error",
    ],
    "vue/no-dupe-v-else-if": [
      "error",
    ],
    "vue/no-duplicate-attributes": [
      "error",
    ],
    "vue/no-export-in-script-setup": [
      "error",
    ],
    "vue/no-expose-after-await": [
      "error",
    ],
    "vue/no-lifecycle-after-await": [
      "error",
    ],
    "vue/no-lone-template": [
      "warn",
    ],
    "vue/no-multi-spaces": [
      "warn",
    ],
    "vue/no-multiple-slot-args": [
      "warn",
    ],
    "vue/no-mutating-props": [
      "error",
    ],
    "vue/no-parsing-error": [
      "error",
    ],
    "vue/no-ref-as-operand": [
      "error",
    ],
    "vue/no-reserved-component-names": [
      "error",
    ],
    "vue/no-reserved-keys": [
      "error",
    ],
    "vue/no-reserved-props": [
      "error",
    ],
    "vue/no-setup-props-destructure": [
      "off",
    ],
    "vue/no-shared-component-data": [
      "error",
    ],
    "vue/no-side-effects-in-computed-properties": [
      "error",
    ],
    "vue/no-spaces-around-equal-signs-in-attribute": [
      "warn",
    ],
    "vue/no-static-inline-styles": [
      "error",
      {
        "allowBinding": true,
      },
    ],
    "vue/no-template-key": [
      "error",
    ],
    "vue/no-template-shadow": [
      "warn",
    ],
    "vue/no-textarea-mustache": [
      "error",
    ],
    "vue/no-unused-components": [
      "error",
    ],
    "vue/no-unused-vars": [
      "error",
    ],
    "vue/no-use-computed-property-like-method": [
      "error",
    ],
    "vue/no-use-v-if-with-v-for": [
      "error",
    ],
    "vue/no-useless-template-attributes": [
      "error",
    ],
    "vue/no-v-for-template-key-on-child": [
      "error",
    ],
    "vue/no-v-html": [
      "warn",
    ],
    "vue/no-v-text-v-html-on-component": [
      "error",
    ],
    "vue/no-watch-after-await": [
      "error",
    ],
    "vue/one-component-per-file": [
      "warn",
    ],
    "vue/order-in-components": [
      "warn",
    ],
    "vue/prefer-import-from-vue": [
      "error",
    ],
    "vue/prop-name-casing": [
      "warn",
    ],
    "vue/require-component-is": [
      "error",
    ],
    "vue/require-default-prop": [
      "off",
    ],
    "vue/require-explicit-emits": [
      "warn",
    ],
    "vue/require-prop-type-constructor": [
      "error",
    ],
    "vue/require-prop-types": [
      "warn",
    ],
    "vue/require-render-return": [
      "error",
    ],
    "vue/require-slots-as-functions": [
      "error",
    ],
    "vue/require-toggle-inside-transition": [
      "error",
    ],
    "vue/require-v-for-key": [
      "error",
    ],
    "vue/require-valid-default-prop": [
      "error",
    ],
    "vue/return-in-computed-property": [
      "error",
    ],
    "vue/return-in-emits-validator": [
      "error",
    ],
    "vue/singleline-html-element-content-newline": [
      "warn",
    ],
    "vue/this-in-template": [
      "warn",
    ],
    "vue/use-v-on-exact": [
      "error",
    ],
    "vue/v-bind-style": [
      "warn",
    ],
    "vue/v-on-event-hyphenation": [
      "warn",
      "always",
      {
        "autofix": true,
      },
    ],
    "vue/v-on-style": [
      "warn",
    ],
    "vue/v-slot-style": [
      "warn",
    ],
    "vue/valid-attribute-name": [
      "error",
    ],
    "vue/valid-define-emits": [
      "error",
    ],
    "vue/valid-define-props": [
      "error",
    ],
    "vue/valid-next-tick": [
      "error",
    ],
    "vue/valid-template-root": [
      "error",
    ],
    "vue/valid-v-bind": [
      "error",
    ],
    "vue/valid-v-cloak": [
      "error",
    ],
    "vue/valid-v-else": [
      "error",
    ],
    "vue/valid-v-else-if": [
      "error",
    ],
    "vue/valid-v-for": [
      "error",
    ],
    "vue/valid-v-html": [
      "error",
    ],
    "vue/valid-v-if": [
      "error",
    ],
    "vue/valid-v-is": [
      "error",
    ],
    "vue/valid-v-memo": [
      "error",
    ],
    "vue/valid-v-model": [
      "error",
    ],
    "vue/valid-v-on": [
      "error",
    ],
    "vue/valid-v-once": [
      "error",
    ],
    "vue/valid-v-pre": [
      "error",
    ],
    "vue/valid-v-show": [
      "error",
    ],
    "vue/valid-v-slot": [
      "error",
    ],
    "vue/valid-v-text": [
      "error",
    ],
    "yield-star-spacing": [
      "error",
    ],
    "yml/block-mapping": [
      "error",
    ],
    "yml/block-mapping-question-indicator-newline": [
      "error",
    ],
    "yml/block-sequence": [
      "error",
    ],
    "yml/block-sequence-hyphen-indicator-newline": [
      "error",
    ],
    "yml/flow-mapping-curly-newline": [
      "error",
    ],
    "yml/flow-mapping-curly-spacing": [
      "error",
    ],
    "yml/flow-sequence-bracket-newline": [
      "error",
    ],
    "yml/flow-sequence-bracket-spacing": [
      "error",
    ],
    "yml/indent": [
      "error",
    ],
    "yml/key-spacing": [
      "error",
    ],
    "yml/no-empty-document": [
      "error",
    ],
    "yml/no-empty-key": [
      "error",
    ],
    "yml/no-empty-mapping-value": [
      "error",
    ],
    "yml/no-empty-sequence-entry": [
      "error",
    ],
    "yml/no-irregular-whitespace": [
      "error",
    ],
    "yml/no-multiple-empty-lines": [
      "error",
      {
        "max": 1,
      },
    ],
    "yml/no-tab-indent": [
      "error",
    ],
    "yml/plain-scalar": [
      "error",
    ],
    "yml/quotes": [
      "error",
    ],
    "yml/spaced-comment": [
      "error",
    ],
    "yml/vue-custom-block/no-parsing-error": [
      "error",
    ],
  },
  "settings": {},
}
`;
